--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <head>
     <body>
     	<button type="button">Klikni Sem</button>
+    	<p id="hiddenmessage" style="display:none">Text</p>
     </body>
 </html>
