--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+    	<script src="js/script.js"></script>
     <head>
     <body>
     	<button type="button">Klikni Sem</button>
