--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <html>
     <head>
     	<title>Message Hider</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="icon" href="/favicon.ico">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     	<script src="xxtea.min.js" type="text/javascript"></script>
     	<script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
