--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="icon" href="/favicon.ico">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     	<script src="xxtea.min.js" type="text/javascript"></script>
@@ -15,27 +14,29 @@
     <head>
     <body onload="runonload()">
         <div class="main">
-            <p class="sm_text bt">Darko s message hider</p>
-            <div class="bl">
-                <label for="byte_length">Byte Length:</label>
-                <input type="number" min="7" value="7" id="byte_length" oninput="this.value = !!this.value && Math.abs(this.value) >= 7 ? Math.abs(this.value) : null">
-            </div>
-            <div class="zero">
-                <label for="zero_var">0 Is Unicode charcode:</label>
-                <input type="text" placeholder="0 Unicode" value="200D" id="zero_var">
-            </div>
-            <div class="one">
-                <label for="one_var">1 Is Unicode charcode:</label>
-                <input type="text" placeholder="1 Unicode" value="2062" id="one_var">
-            </div>
-            <div class="pwd">
-                <label for="pwd_var">Password:</label>
-                <input type="text" placeholder="No Password" value="" id="pwd_var">
-            </div>
-            <div class="btns">
-                <button type="button" id="encr_mode" class="selected" onclick="encrypt_mode()">Encrypt Mode</button>
-                <button type="button" id="decr_mode" onclick="decrypt_mode()">Decrypt Mode</button>
-                <button type="button" id="charc_mode" onclick="charc_mode()">Charcodes</button>
+            <div class="control-panel">
+                <p class="sm_text bt">Darko s message hider</p>
+                <div class="bl">
+                    <label for="byte_length">Byte Length:</label>
+                    <input type="number" min="7" value="7" id="byte_length" oninput="this.value = !!this.value && Math.abs(this.value) >= 7 ? Math.abs(this.value) : null">
+                </div>
+                <div class="zero">
+                    <label for="zero_var">0 Is Unicode charcode:</label>
+                    <input type="text" placeholder="0 Unicode" value="200D" id="zero_var">
+                </div>
+                <div class="one">
+                    <label for="one_var">1 Is Unicode charcode:</label>
+                    <input type="text" placeholder="1 Unicode" value="2062" id="one_var">
+                </div>
+                <div class="pwd">
+                    <label for="pwd_var">Password:</label>
+                    <input type="text" placeholder="None" value="" id="pwd_var">
+                </div>
+                <div class="btns">
+                    <button type="button" id="encr_mode" class="selected" onclick="encrypt_mode()">Encrypt Mode</button>
+                    <button type="button" id="decr_mode" onclick="decrypt_mode()">Decrypt Mode</button>
+                    <button type="button" id="charc_mode" onclick="charc_mode()">Charcodes</button>
+                </div>
             </div>
             <div class="encrypt">
                 <p class="e_text">Encrypt/Hide</p>
