--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button type="button" id="encr_mode" class="selected" onclick="encrypt_mode()">Encrypt Mode</button>
                     <button type="button" id="decr_mode" onclick="decrypt_mode()">Decrypt Mode</button>
                     <button type="button" id="charc_mode" onclick="charc_mode()">Charcodes</button>
+                    <button type="button" id="info_mode" onclick="info_mode()">Info</button>
                 </div>
             </div>
             <div class="encrypt">
@@ -49,7 +50,7 @@
                     <textarea id="HideMsg_encr" name="HideMsg" rows="6" cols="150">Super secret text</textarea>
                 </div>
                 <div class="encrypted">
-                    <label class="hdnmsg_text newline" for="HiddenMsg">Encrypted Message:</label>
+                    <label class="hdnmsg_text_encr newline" for="HiddenMsg">Encrypted Message:</label>
                     <textarea disabled id="HiddenMsg_encr" name="HiddenMsg" rows="6" cols="150"></textarea>
                 </div>
                 <div class="btns">
@@ -58,13 +59,13 @@
                 </div>
             </div>
             <div class="decrypt">
-                <p class="e_text">Decrypt/Reveal</p>
+                <p class="d_text">Decrypt/Reveal</p>
                 <div class="hiddenmsg">
                     <label class="hmsg_text newline" for="HideMsg">Paste the message with secret here:</label>
                     <textarea id="secretmsg_decr" name="HideMsg" rows="6" cols="150">Normal Looking Text</textarea>
                 </div>
                 <div class="decrypted">
-                    <label class="hdnmsg_text newline" for="HiddenMsg">Decrypted Message:</label>
+                    <label class="hdnmsg_text_decr newline" for="HiddenMsg">Decrypted Message:</label>
                     <textarea disabled id="HiddenMsg_decr" name="HiddenMsg" rows="6" cols="150"></textarea>
                 </div>
                 <div class="btns">
@@ -73,10 +74,17 @@
                 </div>
             </div>
             <div class="charcodes">
-                <p class="e_text">Charcodes</p>
+                <p class="c_text">Charcodes</p>
                 <div class="all_charcodes">
-                    <label class="hdnmsg_text newline" for="all_charcodess">Invisible charcode suggestions if you want to change it up</label>
+                    <label class="charc_text newline" for="all_charcodess">Invisible charcode suggestions if you want to change it up</label>
                     <textarea disabled id="all_charcodes" name="all_charcodes" rows="6" cols="150">200D 2061 200C 2063 2064 2062</textarea>
+                </div>
+            </div>
+            <div class="pageinfo">
+                <p class="p_text">Info</p>
+                <div class="all_charcodes">
+                    <label class="info_text newline" for="all_charcodess">Info About The Page</label>
+                    <textarea disabled id="pginfo" name="pginfo" rows="25" cols="150">This page is one of my hobby projects from when i wanted to try and make a website&#13;&#10;&#13;&#10;It can easly make or read well hidden messages with encryption if you want to&#13;&#10;You can find the files for this page on github&#13;&#10;And you can run it localy with no internet needed&#13;&#10;&#13;&#10;&#13;&#10;How encryption works:&#13;&#10;1. If you include a password it encrypts your hidden message with XXTEA s encryptToBase64 encryption&#13;&#10;key beeing the password encrypted in Base64&#13;&#10;2. It converts your hidden message into binary&#13;&#10;3. Replaces all 0s and 1s with unicode characters that have no space and are invisible&#13;&#10;4. Puts it into your decoy message&#13;&#10;&#13;&#10;How decryption works:&#13;&#10;1. Removes everything that isnt the 2 set unicodes&#13;&#10;2. Converts the unicode for 0 to 0&#13;&#10;3. Converts the unicode for 1 to 1&#13;&#10;4. if you include a password it decrypts the encrypted text with XXTEA s decryptFromBase64 encryption&#13;&#10;key beeing the password encrypted in Base64&#13;&#10;5. Converts the binary to text&#13;&#10;&#13;&#10;&#13;&#10;Note: Its possible to give it any unicode charcode but if you use one that is non invisible and has a space the hidden message will be less hidden</textarea>
                 </div>
             </div>
         </div>
