Change to main page

--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-    	<title>Darko s site</title>
+    	<title>Darko s SubSite</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -16,14 +16,13 @@
             <div class="control-panel">
                 <p class="sm_text bt">Darko s site</p>
                 <div class="btns">
-                    <button type="button" id="mh" onclick="vist_page('/MessageHider')">Message Hider</button>
-                    <button type="button" id="ss" onclick="vist_page('SubSite/subsite.html')">SubSite</button>
+                    <button type="button" id="ret" onclick="history.back()">Return</button>
                 </div>
             </div>
             <div class="main">
                 <div class="mp">
                     <label class="info_text newline" for="all_charcodess">My Main Page</label>
-                    <textarea disabled id="pginfo" name="pginfo" rows="6" cols="150">Here you can select what page&#13;&#10;&#13;&#10;You Want to Visit</textarea>
+                    <textarea disabled id="pginfo" name="pginfo" rows="6" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
                 </div>
             </div>
         </div>
