--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -22,14 +22,25 @@
             <div class="main">
                 <div class="mp">
                     <label class="info_text newline" for="all_charcodess">My Main Page</label>
-                    <textarea disabled id="pginfo" name="pginfo" rows="6" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
+                    <textarea disabled id="pginfo" name="pginfo" rows="25" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
                 </div>
             </div>
         </div>
         <!-- The Modal/popup info box -->
-        <div id="infobox" class="infob">
-            <div class="infob-content">
-                <p id="popup_text"></p>
+        <div class="infobox_container">
+            <!-- Here is the hidden checkbox element which makes toggling the modal work -->
+            <input type="checkbox" id="infobox-t" class="infobox_toggler"  />
+            <!-- Here is the background mask. When clicked, it closes the modal. Change this to a div to disable that functionality. -->
+            <label class="infobox_mask" for="infobox-t"></label>
+            <div class="infobox">
+                <label class="infobox_close" for="infobox-t"></label>
+                <div class="infobox_content">
+                    <h1 class="infobox_title" id="infobox-title">Title</h1>
+                    <p>You can click anywhere outside this window to close it.</p>
+                    <p id="infobox-first">Text1</p>
+                    <p id="infobox-second">Text2</p>
+                    <button class="button" onclick="hidemsg()" id="infobox-btn">Close</button>
+                </div>
             </div>
         </div>
     </body>
