--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -22,7 +22,7 @@
             <div class="main">
                 <div class="mp">
                     <label class="info_text newline" for="all_charcodess">My Main Page</label>
-                    <textarea disabled id="pginfo" name="pginfo" rows="25" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
+                    <textarea readonly="readonly" id="pginfo" name="pginfo" rows="6" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
                 </div>
             </div>
         </div>
