--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="main">
                 <div class="mp">
                     <label class="info_text newline" for="all_charcodess">My Main Page</label>
-                    <textarea disabled id="pginfo" name="pginfo" rows="25" cols="150">Here you can select what page&#13;&#10;&#13;&#10;You Want to Visit</textarea>
+                    <textarea readonly="readonly" id="pginfo" name="pginfo" rows="6" cols="150">Here you can select what page&#13;&#10;&#13;&#10;You Want to Visit</textarea>
                 </div>
             </div>
         </div>
