--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -2,13 +2,14 @@
 
 <html>
     <head>
-    	<title>Darko s SubSite</title>
+        <title>Darko s SubSite</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    	<script src="script.js"></script>
+        <script src="customselect.js" type="text/javascript"></script>
+        <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
     <head>
     <body onload="runonload()">
@@ -16,16 +17,154 @@
             <div class="control-panel">
                 <p class="sm_text bt">Darko s SubSite</p>
                 <div class="btns">
+                    <button type="button" id="main_mode" class="selected" onclick="switch_mode(0)">Main</button>
                     <button type="button" id="ret" onclick="history.back()">Return</button>
+                    <button type="button" id="settings_mode" onclick="switch_mode(1)">Settings</button>
                 </div>
             </div>
-            <div class="main">
+            <div class="main_p">
                 <div class="mp">
                     <label class="info_text newline" for="all_charcodess">My Main Page</label>
                     <textarea readonly="readonly" id="pginfo" name="pginfo" rows="6" cols="150">Hello, you can ignore this page&#13;&#10;&#13;&#10;I have it jus as a example of subpage in the same repo</textarea>
                 </div>
             </div>
+            <div class="settingsp">
+                <p class="s_text">Settings</p>
+                <div class="all_settings">
+                    <div class="msgdura">
+                        <label for="msgdura_var" >Info Box Duration</label>
+                        <input type="number" min="0" max="100" value="6" id="msgdura_v" placeholder="Cannot be Empty" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 100 ? Math.abs(this.value) : null">
+                        <span data-text="Controls default info box duration in seconds, set this to 0 to have infinite duration with manual dismissal" class="tooltip">?</span>
+                        <button type="button" id="msgdura_b" onclick="showmsg('This is a test message','Example text','With your set duration');">Test</button>
+                    </div>
+                    <div class="stylesel">
+                        <label for="stylesel_var" >Theme</label>
+                        <div class="custom-select" style="width:200px;">
+                            <select id="stylesel-db">
+                                <option value="lg">Light Green</option>
+                                <option value="lg">Light Green</option>
+                                <option value="dg">Dark Green</option>
+                                <option value="c">Custom</option>
+                            </select>
+                        </div>
+                        <div class="stylesel_emergency_toggle">
+                            <label for="stylesel_vartwo" >Emergency Button Toggle</label>
+                            <label class="switch">
+                                <input type="checkbox" id="stylesel_t" onchange="settingChanged(this)" checked>
+                                <span class="slider"></span>
+                            </label>
+                            <span data-text="Toggle to hide / show the emergency button to reset the theme in case you make the site unuseable with some color combinations" class="tooltip">?</span>
+                        </div>
+                        <div id="stylesel_div">
+                            <label class="stylesel_text newline" id="stylesel_label" for="LccMsg">Custom Theme:</label>
+                            <table id="stylesel_table">
+                                <tr>
+                                    <th>Where the color is used</th>
+                                    <th>Input</th>
+                                    <th>Color</th>
+                                </tr>
+                                <tr>
+                                    <th>Color 1 For Tooltips,Button Glow,Tables</th>
+                                    <th><input type="text" data-varid="--btn-glow_one" placeholder="Use css default" data-defvalue="rgba(44,187,99,.35)" value="rgba(44,187,99,.35)" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Color 2 For Tooltips,Button Glow,Tables</th>
+                                    <th><input type="text" data-varid="--btn-glow_two" placeholder="Use css default" data-defvalue="rgba(44,187,99,.25)" value="rgba(44,187,99,.25)" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Color For Tooltip background,Tables,Control</th>
+                                    <th><input type="text" data-varid="--tooltipbg-bg" placeholder="Use css default" data-defvalue="rgba(20, 55, 0, 0.7)" value="rgba(20, 55, 0, 0.7)" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Main Color, Used for alot of things</th>
+                                    <th><input type="text" data-varid="--main-color" placeholder="Use css default" data-defvalue="#0ca21d" value="#0ca21d" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Med Color, Used for buttons hover</th>
+                                    <th><input type="text" data-varid="--med-color" placeholder="Use css default" data-defvalue="#0ebe20" value="#0ebe20" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Text Color, Used primarily for text</th>
+                                    <th><input type="text" data-varid="--text-color" placeholder="Use css default" data-defvalue="#aafbb5" value="#aafbb5" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <th>Disabled Color, Used primarily for buttons</th>
+                                    <th><input type="text" data-varid="--disabled-main" placeholder="Use css default" data-defvalue="#6ca271" value="#6ca271" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="disbledc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Background color 1, primarily used for background</th>
+                                    <th><input type="text" data-varid="--bg-color" placeholder="Use css default" data-defvalue="#2b2d2b" value="#2b2d2b" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="bgc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Background color 2, primarily used for background</th>
+                                    <th><input type="text" data-varid="--secondary-color" placeholder="Use css default" data-defvalue="#131413" value="#131413" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="secondc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Background color 3, primarily used for background</th>
+                                    <th><input type="text" data-varid="--third-color" placeholder="Use css default" data-defvalue="#171817" value="#171817" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="thirdc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Background color 4, primarily used for background</th>
+                                    <th><input type="text" data-varid="--fourth-color" placeholder="Use css default" data-defvalue="#212922" value="#212922" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="fourthc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Selected color, primarily used for borders</th>
+                                    <th><input type="text" data-varid="--selected-color" placeholder="Use css default" data-defvalue="#000" value="#000" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="selc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Disabled Color 2</th>
+                                    <th><input type="text" data-varid="--disabled-color" placeholder="Use css default" data-defvalue="#442323" value="#442323" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="disbledcc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Darker Main</th>
+                                    <th><input type="text" data-varid="--darkgreen" placeholder="Use css default" data-defvalue="#0d4208" value="#0d4208" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="dgc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Light Gray, used for dropdown menus</th>
+                                    <th><input type="text" data-varid="--lightgray" placeholder="Use css default" data-defvalue="#373737" value="#373737" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="lgc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Body Color, used for body background color</th>
+                                    <th><input type="text" data-varid="--bodycolor" placeholder="Use css default" data-defvalue="#0d4208" value="#0d4208" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="bc_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Input Color, used primarily for inputs</th>
+                                    <th><input type="text" data-varid="--inputcolor" placeholder="Use css default" data-defvalue="rgba(44,187,99,.35)" value="rgba(44,187,99,.35)" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="ic_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Control Panel Color 1, used control panel bg</th>
+                                    <th><input type="text" data-varid="--contpanel-colone" placeholder="Use css default" data-defvalue="#212922" value="#212922" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="ic_clr"></th>
+                                </tr>
+                                <tr>
+                                    <th>Control Panel Color 2, used control panel bg</th>
+                                    <th><input type="text" data-varid="--contpanel-coltwo" placeholder="Use css default" data-defvalue="rgba(20, 55, 0, 0.7)" value="rgba(20, 55, 0, 0.7)" class="customstyle" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)"></th>
+                                    <th id="ic_clr"></th>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <button type="button" id="emergency_sr" onclick="changetheme('reset');">Reset Theme</button>
         <!-- The Modal/popup info box -->
         <div class="infobox_container">
             <!-- Here is the hidden checkbox element which makes toggling the modal work -->
