--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
                         <span data-text="Controls default info box duration in seconds, set this to 0 to have infinite duration with manual dismissal" class="tooltip">?</span>
                         <button type="button" id="msgdura_b" onclick="showmsg('This is a test message','Example text','With your set duration');">Test</button>
                     </div>
+                    <div class="huer">
+                        <label for="huer_var" >Color/Hue Rotation</label>
+                        <div>
+                            <label for="huer_varman" >Manual</label>
+                            <input type="range" min="0" max="360" value="0" class="slider" id="huer_s" oninput="settingChanged(this)">
+                            <input type="number" min="0" max="360" value="0" id="huer_v" placeholder="" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 360 ? Math.abs(this.value) : null">
+                            <span data-text="Allows you to easly change color of the site" class="tooltip">?</span>
+                        </div>
+                        <div>
+                            <label for="huer_varauto" >Auto</label>
+                            <label class="switch">
+                                <input type="checkbox" id="huer_t" onchange="settingChanged(this)">
+                                <span class="toggle"></span>
+                            </label>
+                            <input type="number" min="1" max="6000" value="100" id="huer_vi" placeholder="" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 1  && Math.abs(this.value) <= 6000 ? Math.abs(this.value) : null">
+                            <span data-text="Set a interval(MiliSeconds) for automated color changing" class="tooltip">?</span>
+                        </div>
+                    </div>
                     <div class="stylesel">
                         <label for="stylesel_var" >Theme</label>
                         <div class="custom-select" style="width:200px;">
@@ -52,7 +70,7 @@
                             <label for="stylesel_vartwo" >Emergency Button Toggle</label>
                             <label class="switch">
                                 <input type="checkbox" id="stylesel_t" onchange="settingChanged(this)" checked>
-                                <span class="slider"></span>
+                                <span class="toggle"></span>
                             </label>
                             <span data-text="Toggle to hide / show the emergency button to reset the theme in case you make the site unuseable with some color combinations" class="tooltip">?</span>
                         </div>
