Fixed data not transfering over when clicking return on phone with duckduckgo browser

--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -19,7 +19,7 @@
                 <p class="sm_text bt">Darko s SubSite</p>
                 <div class="btns">
                     <button type="button" id="main_mode" class="selected" onclick="switch_mode(0)">Main</button>
-                    <button type="button" id="ret" onclick="history.back()">Return</button>
+                    <button type="button" id="ret" onclick="vist_page(save_data_in_url('../index.html'))">Return</button>
                     <button type="button" id="settings_mode" onclick="switch_mode(1)">Settings</button>
                 </div>
             </div>
