added `cursor: default;` to disabled button, and a new button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <button type="button" id="main_mode" class="selected" onclick="switch_mode(0)">Main</button>
                     <button type="button" id="mh" onclick="vist_page(save_data_in_url('/MessageHider'))">Message Hider</button>
                     <button type="button" id="ss" onclick="vist_page(save_data_in_url('SubSite/subsite.html'))">SubSite</button>
+                    <button type="button" id="ss" onclick="vist_page(save_data_in_url('/puzzle'))">Puzzle</button>
                     <button type="button" id="settings_mode" onclick="switch_mode(1)">Settings</button>
                 </div>
             </div>
